[gd_scene load_steps=4 format=3 uid="uid://cfey2hlr6m6hj"]

[ext_resource type="Script" path="res://scripts/inventory/Throwing_Knife_Main.gd" id="1_s6mcx"]
[ext_resource type="Texture2D" uid="uid://cmjhi7j4bxeux" path="res://sprites/items/item_spawnables/knife_throw.png" id="2_6qsle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kh4h"]
size = Vector2(10, 6)

[node name="Throwing_Knife_Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_s6mcx")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="KnifeThrow" type="Sprite2D" parent="main_body/main_body_2"]
texture = ExtResource("2_6qsle")

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("RectangleShape2D_3kh4h")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
